[package]
name = "rust_mobilenet_food"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[lib]
name = "rust_mobilenet_food_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
wasmedge_tensorflow_interface = "^0.2.0"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "0.21.0"
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "^1.0.51"
urlencoding = "1.3.3"
hermit-abi = "=0.1.19"
num_cpus = "=1.13.1"
owned_ttf_parser = "=0.12.0"
rusttype = "=0.9.2"
rayon-core = "=1.9.1"
rayon = "=1.5.1"

